--- a/_posts/2015-05-19-1m1.markdown
+++ b/_posts/2015-05-19-1m1.markdown
@@ -14,7 +14,7 @@ active: blogs
 
     - เลขหน้า คือเลขที่แสดงreel ว่าเป็นม้วนที่เท่าไร สำหรับปัจจุบันไม่มีม้วนฟิล์มแล้ว เลยใช้แสดงเป็นลำดับไฟล์แทน เพราะบางเจ้าเขาไม่ได้ส่งหนังทีเดียวยาวๆมา เขาแบ่งเป็นส่วนๆ เช่นเลขสาม คือไฟล์ลำดับที่สาม เรียงตามลำดับของหนัง
 
-    - **M** คือตัวอักษรแทน music
+    - M คือตัวอักษรแทน music
 
     - เลขหลังคือลำดับเพลงที่เท่าไร เช่นในนี้คือ6 
 
@@ -22,7 +22,7 @@ active: blogs
 
 ถ้าหากมีการแก้ไข เขาก็จะใส่ **v1,2,3...** (version1) ไปตามลำดับ
 
-บางคิวมีใส่ **A,B,C** ก็คือเพลงที่เอามาแทรกทีหลัง หลังเรียงคิวไปแล้ว
+บางคิวมีใส่ **A,B,C** ก็คือเพลงที่เอามาแทรกทีหลัง หลังเรียงคิวไปแล้ว ไม่เช่นนั้นต้องมาจัดเรียงเลขใหม่ทำให้เสียเวลาและมึนงง
 
 ที่ตั้งชื่อเพลงแบบนี้ง่ายต่อการส่งต่อให้ห้องอัดหรือมิกซ์ด้วย เพราะมันจะเรียงตามลำดับและง่ายต่อการจัดการ
 
